--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <main>
 
         <div class="container">
@@ -56,11 +56,14 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque recusandae numquam, harum
                         incidunt ut nulla quibusdam odio vitae quis? Quo iure incidunt enim neque quis repudiandae
                         voluptas saepe ab reprehenderit?</p>
-
                 </div>
 
+            </div>
+
+            <div class="row row-3">
 
                 <div class="child3">
+
                     <h3>title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio corporis repellendus error, quis,
                         facere cum deserunt nisi sunt cupiditate exercitationem soluta, commodi odit vero nihil? Est
